# Bank-statement-analyzer

./: README.md
backend/: debug.txt  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: upload.py
backend/app/models/: transaction.py  transaction_block.py
backend/app/parser/: account_parser.py  pdf_reader.py  transaction_parser.py  word_parser.py
backend/app/services/: analytics.py  categorizer.py  excel_generator.py  validators.py
backend/app/uploads/: transactions.xlsx
frontend/src/: App.jsx
frontend/src/api/: helper.js
frontend/src/components/: MonthlyTable.jsx  SummaryCards.jsx  TopTransactions.jsx  UploadBox.jsx
frontend/src/pages/: Homes.jsx
