
[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
